Add JVM Internals and Performance as separate topic file
- Created 09-jvm-internals.md with comprehensive JVM architecture, JIT
  compiler examples, memory management, and garbage collection content
- Simplified JIT section in 01-java-basics.md with reference to new file
- Simplified memory/GC sections in 02-object-oriented-programming.md
- Consolidated advanced JVM content for better learning progression

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>